--- a/src/notes/01html/01.md
+++ b/src/notes/01html/01.md
@@ -67,6 +67,53 @@
 | `<u>`          | 定义下划线文本。                 |
 | `<var>`        | 定义文本的变量部分。             |
 
+```html
+<abbr title="中华人民共和国">中国</abbr>
+<address>
+  地址：福建省厦门市<br>
+  邮编：361000
+</address>
+<b>中国CCTV</b><br>
+<i>中国CCTV</i><br>
+<em>中国CCTV</em><br>
+<strong>中国CCTV</strong><br>
+<s>中国CCTV</s><br>
+<del>中国CCTV</del><br>
+<u>中国CCTV</u><br>
+<ins>中国CCTV</ins><br>
+水： H<sub>2</sub>O<br>
+上标文本能用来添加脚注，比如 盘古<sup>[1]</sup><br>
+<bdo dir="rtl">中国CCTV</bdo><br>
+<bdo dir="ltr">中国CCTV</bdo><br>
+<pre>
+  此例演示如何使用 pre 标签
+  对空行和 空格
+  进行控制
+  </pre>
+神仙好：
+<blockquote cite="https://baike.baidu.com/item/%E7%BA%A2%E6%A5%BC%E6%A2%A6/15311?fr=aladdin">
+  世人都晓神仙好,惟有功名忘不了! 
+  古今将相在何方?荒冢一堆草没了。
+  世人都晓神仙好,只有金银忘不了! 
+  终朝只恨聚无多,及到多时眼闭了。
+  世人都晓神仙好,只有娇妻忘不了! 
+  君生日日说恩情,君死又随人去了。
+  世人都晓神仙好,只有儿孙忘不了! 
+  痴心父母古来多,孝顺儿孙谁见了?
+</blockquote>
+<br>
+神仙好：
+<q cite="https://baike.baidu.com/item/%E7%BA%A2%E6%A5%BC%E6%A2%A6/15311?fr=aladdin">
+  世人都晓神仙好,惟有功名忘不了! 
+</q> <br>
+<cite>红楼梦</cite>清代 曹雪芹著.<br>
+<code>一段电脑代码</code> <br>
+<dfn>定义项目</dfn><br>
+<kbd>键盘输入</kbd><br>
+<samp>计算机样本</samp><br>
+<var>变量</var><br>
+```
+
 :::
 
 :::snippet HTML 表单标签
@@ -84,6 +131,38 @@
 | `<fieldset>` | 定义围绕表单中元素的边框。         |
 | `<legend>`   | 定义 fieldset 元素的标题。         |
 
+```html
+<form action="demo-form.php">
+  <fieldset>
+    <legend>个人信息:</legend>
+    <label for="userName">用户名：</label>
+    <input type="text" name="userName" value="Mickey" /><br />
+    <label for="grade"> 年级: </label>
+    <select name="grade">
+      <optgroup label="初中">
+        <option value="初一">初一</option>
+        <option value="初二">初二</option>
+        <option value="初三">初三</option>
+      </optgroup>
+      <optgroup label="高中">
+        <option value="高一">高一</option>
+        <option value="高二">高二</option>
+        <option value="高三">高三</option>
+      </optgroup>
+    </select>
+    <br />
+    <label for="sex">性别：</label>
+    <label><input name="sex" type="radio" value="男" />男 </label>
+    <label><input name="sex" type="radio" value="女" />女 </label>
+    <br />
+    <label for="remark">备注：</label>
+    <textarea rows="3" cols="30" name="remark"> </textarea>
+    <br />
+    <button type="submit">提交</button>
+  </fieldset>
+</form>
+```
+
 :::
 
 :::snippet HTML 框架标签
@@ -92,18 +171,59 @@
 | ---------- | -------------- |
 | `<iframe>` | 定义内联框架。 |
 
+```html
+<iframe src="//www.runoob.com" height="500px" width="88%">
+  <p>您的浏览器不支持 iframe 标签。</p>
+</iframe>
+```
+
 :::
 
 :::snippet HTML 图像标签
 
-| 标签           | 描述                                                                |
-| -------------- | ------------------------------------------------------------------- |
-| `<img>`        | 定义图像。                                                          |
-| `<map>`        | 定义图像映射。                                                      |
-| `<area>`       | 定义图像地图内部的区域。                                            |
-| `<canvas>`     | New 通过脚本（通常是 JavaScript）来绘制图形（比如图表和其他图像）。 |
-| `<figcaption>` | New 定义一个 `caption for a <figure> element`。                     |
-| `<figure>`     | New figure 标签用于对元素进行组合。                                 |
+| 标签     | 描述                     |
+| -------- | ------------------------ |
+| `<img>`  | 定义图像。               |
+| `<map>`  | 定义图像映射。           |
+| `<area>` | 定义图像地图内部的区域。 |
+
+```html
+<img
+  src="../assets/images/html-06-01.png"
+  title="http方法"
+  alt="Smiley face"
+  width="auto"
+  height="auto"
+/>
+<p>点击太阳或其他行星，注意变化：</p>
+<img
+  src="https://www.runoob.com/try/demo_source/planets.gif"
+  width="145"
+  height="126"
+  alt="Planets"
+  usemap="#planetmap"
+/>
+<map name="planetmap">
+  <area
+    shape="rect"
+    coords="0,0,82,126"
+    alt="Sun"
+    href="https://www.runoob.com/try/demo_source/sun.htm"
+  />
+  <area
+    shape="circle"
+    coords="90,58,3"
+    alt="Mercury"
+    href="https://www.runoob.com/try/demo_source/mercur.htm"
+  />
+  <area
+    shape="circle"
+    coords="124,58,8"
+    alt="Venus"
+    href="https://www.runoob.com/try/demo_source/venus.htm"
+  />
+</map>
+```
 
 :::
 
@@ -113,21 +233,55 @@
 | -------- | -------------------------- |
 | `<a>`    | 定义一个链接。             |
 | `<link>` | 定义文档与外部资源的关系。 |
-| `<main>` | 定义文档的主体部分。       |
+
+```html
+<head>
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="http://www.runoob.com/try/demo_source/styles.css"
+  />
+</head>
+<body>
+  <h1>我是通过样式文件 styles.css 渲染后显示的。</h1>
+  <a href="http://www.runoob.com" target="_blank">访问菜鸟教程!</a>
+</body>
+```
 
 :::
 
 :::snippet HTML 列表
 
-| 标签     | 描述                           |
-| -------- | ------------------------------ |
-| `<ul>`   | 定义一个无序列表。             |
-| `<ol>`   | 定义一个有序列表。             |
-| `<li>`   | 定义一个列表项。               |
-| `<dl>`   | 定义一个定义列表。             |
-| `<dt>`   | 定义一个定义定义列表中的项目。 |
-| `<dd>`   | 定义定义列表中项目的描述。     |
-| `<menu>` | 定义菜单列表。                 |
+| 标签   | 描述                           |
+| ------ | ------------------------------ |
+| `<ul>` | 定义一个无序列表。             |
+| `<ol>` | 定义一个有序列表。             |
+| `<li>` | 定义一个列表项。               |
+| `<dl>` | 定义一个定义列表。             |
+| `<dt>` | 定义一个定义定义列表中的项目。 |
+| `<dd>` | 定义定义列表中项目的描述。     |
+
+```html
+<ul>
+  <li>足球</li>
+  <li>篮球</li>
+  <li>棒球</li>
+</ul>
+<ol>
+  <li>春天</li>
+  <li>夏天</li>
+  <li>秋天</li>
+  <li>冬天</li>
+</ol>
+<dl>
+  <dt>三国演义
+  <dd>东汉末年至西晋乱世</dd>
+  </dt>
+  <dt>红楼梦
+    <dd>贾宝玉和林黛玉的爱情</dd>
+    </dt>
+</dl>
+```
 
 :::
 
@@ -146,6 +300,48 @@
 | `<col>`      | 定义表格中一个或多个列的属性值。 |
 | `<colgroup>` | 定义表格中供格式化的列组。       |
 
+```html
+<table>
+  <caption>
+    成绩表
+  </caption>
+  <colgroup>
+    <col style="background-color:yellow" />
+    <col span="3" style="background-color:red" />
+  </colgroup>
+  <thead>
+    <tr>
+      <th>姓名</th>
+      <th>数学</th>
+      <th>语文</th>
+      <th>英语</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>小红</td>
+      <td>80</td>
+      <td>85</td>
+      <td>95</td>
+    </tr>
+    <tr>
+      <td>小明</td>
+      <td>88</td>
+      <td>77</td>
+      <td>99</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <td>平均分</td>
+      <td>84</td>
+      <td>81</td>
+      <td>97</td>
+    </tr>
+  </tfoot>
+</table>
+```
+
 :::
 
 :::snippet HTML 样式/节
@@ -155,6 +351,20 @@
 | `<style>` | 定义文档的样式信息。 |
 | `<div>`   | 定义文档中的节。     |
 | `<span>`  | 定义文档中的节。     |
+
+```html
+<style type="text/css">
+  h1 {
+    color: red;
+  }
+</style>
+<h1>这是一个标题</h1>
+<div style="color:#0000FF">
+  <h3>这是一个在 div 元素中的标题。</h3>
+  <p>这是一个在 div 元素中的文本。</p>
+</div>
+<p>蓝血人有 <span style="color:blue">蓝色</span> 的眼睛。</p>
+```
 
 :::
 
@@ -166,6 +376,29 @@
 | `<meta>` | 定义关于 HTML 文档的元信息。             |
 | `<base>` | 定义页面中所有链接的默认地址或默认目标。 |
 
+```html
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta name="description" content="免费在线教程">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  <meta name="author" content="runoob">
+  <meta charset="UTF-8">
+  <base href="http://www.runoob.com/images/" target="_blank">
+  <title>文档标题</title>
+</head>
+
+<body>
+  <p><img src="logo.png"> - 注意这里我们设置了图片的相对地址。能正常显示是因为我们在 head 部分设置了 base 标签，该标签指定了页面上所有链接的默认 URL，所以该图片的访问地址为
+    "http://www.runoob.com/images/logo.png"</p>
+  <p><a href="//www.runoob.com/">runoob.com</a> - 注意这个链接会在新窗口打开，即便它没有 target="_blank" 属性。因为在 base 标签里我们已经设置了 target
+    属性的值为 "_blank"。</p>
+</body>
+
+</html>
+```
+
 :::
 
 :::snippet HTML 程序
@@ -176,5 +409,29 @@
 | `<noscript>` | 定义针对不支持客户端脚本的用户的替代内容。 |
 | `<object>`   | 定义嵌入的对象。                           |
 | `<param>`    | 定义对象的参数。                           |
+
+```html
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta name="description" content="免费在线教程">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  <meta name="author" content="runoob">
+  <meta charset="UTF-8">
+  <title>文档标题</title>
+</head>
+<script>
+  document.write("Hello World!")
+  </script>
+<body>
+  <noscript>抱歉，你的浏览器不支持 JavaScript!</noscript>
+  <p>不支持 JavaScript 的浏览器会使用 &lt;noscript&gt; 元素中定义的内容（文本）来替代。</p>
+  <object data="http://www.runoob.com/try/demo_source/horse.wav">
+    <param name="autoplay" value="true">
+  </object>
+</body>
+</html>
+```
 
 :::
