--- a/src/notes/01html/02.md
+++ b/src/notes/01html/02.md
@@ -12,6 +12,38 @@
 | `<time>`     | 定义一个日期/时间。                                  |
 | `<wbr>`      | 规定在文本中的何处适合添加换行符。                   |
 
+```html
+<p>
+  在下面的示例中,显示着每个用户比赛的分数。将用户名从周围的文本方向设置中隔离出来。
+</p>
+<ul>
+  <li>用户 <bdi>hrefs</bdi>: 60 分</li>
+  <li>用户 <bdi>jdoe</bdi>: 80 分</li>
+  <li>用户 <bdi>إيان</bdi>: 90 分</li>
+</ul>
+<p><b>注意：</b> 目前只有 Firefox 和 Chrome 浏览器支持 bdi 标签。</p>
+<p>定义带有 <mark>记号</mark> 的文本.</p>
+<meter value="2" min="0" max="10">2 out of 10</meter><br />
+<meter value="0.6">60%</meter>
+下载进度：
+<progress value="22" max="100"> </progress>
+<p>
+  <strong>注意：</strong> IE 9 或者更早版本的 IE 浏览器不支持 progress 标签。
+</p>
+<ruby>
+  汉 <rp>(</rp>
+  <rt>Han</rt>
+  <rp>)</rp>
+  字 <rp>(</rp>
+  <rt>zi</rt>
+  <rp>)</rp>
+</ruby>
+<p>尝试缩小浏览器窗口，以下段落的 "XMLHttpRequest" 单词会被分行：</p>
+<p>学习 AJAX ,您必须熟悉 <wbr />XMLHttp<wbr />Request 对象。</p>
+<p><b>注意：</b> IE 浏览器不支持 wbr 标签。</p>
+<p>我们在每天早上 <time>9:00</time> 开始上班。</p>
+```
+
 :::
 
 :::snippet HTML5 表单标签
@@ -19,8 +51,28 @@
 | 标签         | 描述                              |
 | ------------ | --------------------------------- |
 | `<datalist>` | 规定了 input 元素可能的选项列表。 |
-| `<keygen>`   | 规定用于表单的密钥对生成器字段。  |
 | `<output>`   | 定义一个计算的结果。              |
+
+```html
+<input list="browsers" />
+<datalist id="browsers">
+  <option value="Internet Explorer"> </option>
+  <option value="Firefox"> </option>
+  <option value="Chrome"> </option>
+  <option value="Opera"> </option>
+  <option value="Safari"> </option>
+</datalist>
+
+<form oninput="x.value=parseInt(a.value)+parseInt(b.value)">
+  0 <input type="range" id="a" value="50" />100 +<input
+    type="number"
+    id="b"
+    value="50"
+  />
+  =<output name="x" for="a b"></output>
+</form>
+<p><strong>注意:</strong> Edge 12及更早 IE 版本的浏览器不支持 output 元素。</p>
+```
 
 :::
 
@@ -31,6 +83,25 @@
 | `<canvas>`     | 通过脚本（通常是 JavaScript）来绘制图形（比如图表和其他图像）。 |
 | `<figcaption>` | 定义一个 caption for a <figure> element                         |
 | `<figure>`     | figure 标签用于对元素进行组合。                                 |
+
+```html
+<canvas id="myCanvas">你的浏览器不支持 HTML5 canvas 标签。</canvas>
+<script>
+  var c = document.getElementById("myCanvas");
+  var ctx = c.getContext("2d");
+  ctx.fillStyle = "#FF0000";
+  ctx.fillRect(0, 0, 80, 100);
+</script>
+<figure>
+  <img
+    src="https://www.runoob.com/try/demo_source/img_pulpit.jpg"
+    alt="The Pulpit Rock"
+    width="304"
+    height="228"
+  />
+  <figcaption>Fig1. - A view of the pulpit rock in Norway.</figcaption>
+</figure>
+```
 
 :::
 
@@ -43,6 +114,42 @@
 | `<track>`  | 为媒体(<video> 和 <audio>)元素定义外部文本轨道。      |
 | `<video>`  | 定义一个音频或者视频。                                |
 
+```html
+<audio controls>
+  <source
+    src="https://www.runoob.com/try/demo_source/horse.ogg"
+    type="audio/ogg"
+  />
+  <source
+    src="https://www.runoob.com/try/demo_source/horse.mp3"
+    type="audio/mpeg"
+  />
+  您的浏览器不支持 audio 元素。
+</audio>
+<video width="320" height="240" controls>
+  <source
+    src="https://www.runoob.com/try/demo_source/forrest_gump.mp4"
+    type="video/mp4"
+  />
+  <source
+    src="https://www.runoob.com/try/demo_source/forrest_gump.ogg"
+    type="video/ogg"
+  />
+  <track
+    src="https://www.runoob.com/try/demo_source/subtitles_en.vtt"
+    kind="subtitles"
+    srclang="en"
+    label="English"
+  />
+  <track
+    src="https://www.runoob.com/try/demo_source/subtitles_no.vtt"
+    kind="subtitles"
+    srclang="no"
+    label="Norwegian"
+  />
+</video>
+```
+
 :::
 
 :::snippet HTML5 链接
@@ -51,19 +158,21 @@
 | ------- | -------------- |
 | `<nav>` | 定义导航链接。 |
 
+```html
+<nav>
+  <a href="https://www.runoob.com/html/">HTML</a> |
+  <a href="https://www.runoob.com/css/">CSS</a> |
+  <a href="https://www.runoob.com/js/">JavaScript</a> |
+</nav>
+```
+
 :::
 
-:::snippet HTML 列表
-
-| 标签        | 描述                                                   |
-| ----------- | ------------------------------------------------------ |
-| `<command>` | 定义用户可能调用的命令（比如单选按钮、复选框或按钮）。 |
-
-:::
 :::snippet HTML 样式/节
 
 | 标签        | 描述                                                    |
 | ----------- | ------------------------------------------------------- |
+| `<main>`    | 定义文档的主体部分。                                    |
 | `<header>`  | 定义一个文档头部部分。                                  |
 | `<footer>`  | 定义一个文档底部。                                      |
 | `<section>` | 定义了文档的某个区域。                                  |
@@ -73,11 +182,60 @@
 | `<dialog>`  | 定义一个对话框或者窗口。                                |
 | `<summary>` | 定义一个可见的标题。 当用户点击标题时会显示出详细信息。 |
 
+```html
+<section>
+  <header>
+    <h1>浏览器</h1>
+    <p><time pubdate datetime="2011-03-15"></time></p>
+  </header>
+  <main>
+    <article>
+      <h4>IE</h4>
+      <p>IE调试BUG很痛苦</p>
+    </article>
+    <aside>
+      <h4>谷歌</h4>
+      <p>谷歌开发者浏览器.</p>
+    </aside>
+  </main>
+  <footer>
+    <p>Posted by: Hege Refsnes</p>
+    <p><time pubdate datetime="2012-03-01"></time></p>
+  </footer>
+</section>
+<details>
+  <summary>Copyright 1999-2011.</summary>
+  <p>- by Refsnes Data. All Rights Reserved.</p>
+  <p>
+    All content and graphics on this web site are the property of the company
+    Refsnes Data.
+  </p>
+</details>
+
+<p><b>注意：</b>目前只有 Chrome 和 Safari 6 支持 dialog 标签。</p>
+<p>January <dialog open>This is an open dialog window</dialog></p>
+```
+
 :::
 :::snippet HTML 程序
 
 | 标签      | 描述                                                       |
 | --------- | ---------------------------------------------------------- |
 | `<embed>` | New 定义了一个容器，用来嵌入外部应用或者互动程序（插件）。 |
+
+```html
+<embed
+  type="image/jpg"
+  src="https://static.runoob.com/images/runoob-logo.png"
+  width="258"
+  height="39"
+/>
+<embed
+  type="text/html"
+  src="https://www.runoob.com/try/demo_source/snippet.html"
+  width="500"
+  height="200"
+/>
+```
 
 :::
