--- a/src/notes/01html/04.md
+++ b/src/notes/01html/04.md
@@ -2,12 +2,28 @@
 
 由窗口触发该事件 (适用于 <body> 标签):
 
-| 属性         | 值     | 描述                     |
-| ------------ | ------ | ------------------------ |
-| `onblur`     | script | 当窗口失去焦点时运行脚本 |
-| `onerrorNew` | script | 当错误发生时运行脚本     |
-| `onfocus`    | script | 当窗口获得焦点时运行脚本 |
-| `onload`     | script | 当文档加载时运行脚本     |
+| 属性      | 值     | 描述                     |
+| --------- | ------ | ------------------------ |
+| `onblur`  | script | 当窗口失去焦点时运行脚本 |
+| `onfocus` | script | 当窗口获得焦点时运行脚本 |
+| `onload`  | script | 当文档加载时运行脚本     |
+
+```html
+<script>
+  function load() {
+    alert("页面已经载入！");
+  }
+  function focus() {
+    console.log("获取焦点！");
+  }
+  function blur() {
+    console.log("失去焦点！");
+  }
+</script>
+<body onload="load()" onfocus="focus" onblur="blur">
+  <h1>Hello World!</h1>
+</body>
+```
 
 :::
 
@@ -23,6 +39,34 @@
 | `onselect` | script | 当选取元素时运行脚本     |
 | `onsubmit` | script | 当提交表单时运行脚本     |
 
+```html
+<form action="demo_form.php" onsubmit="checkForm()">
+  转换大写: <input type="text" name="fname" id="fname" onblur="blur()" /><br />
+  输入文本: <input type="text" name="txt" onchange="change(this.value)" /><br />
+  修改文本: <input type="text" name="txtcopy" id="txtcopy" disabled /> <br />
+  选中文本: <input type="text" value="选取我!!" onselect="showMsg()" />
+  <input type="submit" value="提交" />
+</form>
+<script>
+  function blur() {
+    var x = document.getElementById("fname").value;
+    document.getElementById("fname").value = x.toUpperCase();
+  }
+
+  function change(val) {
+    document.getElementById("txtcopy").value = val;
+  }
+
+  function showMsg() {
+    alert("你选取了一些文本信息!");
+  }
+
+  function checkForm() {
+    alert("提交表单");
+  }
+</script>
+```
+
 :::
 
 :::snippet HTML 键盘事件（Keyboard Events）
@@ -32,6 +76,48 @@
 | `onkeydown`  | script | 当按下按键时运行脚本       |
 | `onkeypress` | script | 当按下并松开按键时运行脚本 |
 | `onkeyup`    | script | 当松开按键时运行脚本       |
+
+触发顺序:
+
+1. onkeydown
+2. onkeypress
+3. onkeyup
+
+```html
+onkeydown:<input type="text" onkeydown="onkeydownResult()" /><br />
+onkeypress:<input type="text" onkeypress="onkeypressResult()" /><br />
+onkeyup: <input type="text" id="fname" onkeyup="onkeyupResult()" /><br />
+<script>
+  function onkeyupResult() {
+    var x = document.getElementById("fname");
+    x.value = x.value.toUpperCase();
+  }
+  function onkeypressResult() {
+    var x;
+    if (window.event) {
+      // IE8 及更早IE版本
+      x = event.keyCode;
+    } else if (event.which) {
+      // IE9/Firefox/Chrome/Opera/Safari
+      x = event.which;
+    }
+    var keychar = String.fromCharCode(x);
+    alert("按键 " + keychar + " 被按下onkeypress");
+  }
+  function onkeydownResult() {
+    var x;
+    if (window.event) {
+      // IE8 及更早IE版本
+      x = event.keyCode;
+    } else if (event.which) {
+      // IE9/Firefox/Chrome/Opera/Safari
+      x = event.which;
+    }
+    var keychar = String.fromCharCode(x);
+    alert("按键 " + keychar + " 被按下onkeydown");
+  }
+</script>
+```
 
 :::
 
@@ -47,6 +133,60 @@
 | `onmouseover` | script | 当鼠标指针移至元素之上时运行脚本 |
 | `onmouseup`   | script | 当松开鼠标按钮时运行脚本         |
 
+```html
+原值: <input type="text" id="field1" value="Hello World!" /><br />
+复制: <input type="text" id="field2" disabled /> <br /><br />
+<button onclick="copyText()">单击复制文本</button><br />
+<button ondblclick="copyText()">双击复制文本</button><br />
+<p id="p1" onmousedown="mouseDown()" onmouseup="mouseUp()">
+  点击文本! 在鼠标按下时触发 mouseDown()函数，该函数修改文本样式为红色。
+  在鼠标松开时触发 mouseUp()函数,该函数修改文本样式为绿色。
+</p>
+<img
+  onmouseover="bigImg(this)"
+  onmouseout="normalImg(this)"
+  border="0"
+  src="https://www.runoob.com/try/demo_source/smiley.gif"
+  alt="Smiley"
+  width="32"
+  height="32"
+/>
+<p>当用户将鼠标移动到图片上时触发 bigImg() 函数。该函数使图片变大。</p>
+<p>当用户将鼠标移开图片时触发 normalImg() 函数。该函数使图片变回原来大写。</p>
+<img
+  onmousemove="bigImg(this)"
+  onmouseout="normalImg(this)"
+  border="0"
+  src="https://www.runoob.com/try/demo_source/smiley.gif"
+  alt="Smiley"
+  width="32"
+  height="32"
+/>
+<p>当用户将鼠标移动到图片时触发 bigImg() 函数。该函数使图片变大。</p>
+<p>当用户将鼠标移开时触发 normalImg() 函数。该函数使图片变回原来大小。</p>
+<script>
+  function copyText() {
+    document.getElementById("field2").value = document.getElementById(
+      "field1"
+    ).value;
+  }
+  function mouseDown() {
+    document.getElementById("p1").style.color = "red";
+  }
+  function mouseUp() {
+    document.getElementById("p1").style.color = "green";
+  }
+  function bigImg(x) {
+    x.style.height = "64px";
+    x.style.width = "64px";
+  }
+  function normalImg(x) {
+    x.style.height = "32px";
+    x.style.width = "32px";
+  }
+</script>
+```
+
 :::
 
 :::snippet HTML 多媒体事件(Media Events)
@@ -55,5 +195,17 @@
 | 属性      | 值     | 描述                     |
 | --------- | ------ | ------------------------ |
 | `onabort` | script | 当发生中止事件时运行脚本 |
+
+```html
+<img
+  src="https://static.runoob.com/images/runoob-logo.png"
+  onabort="myFunction()"
+/>
+<script>
+  function myFunction() {
+    alter("加载完毕");
+  }
+</script>
+```
 
 :::
