--- a/src/notes/01html/05.md
+++ b/src/notes/01html/05.md
@@ -18,6 +18,10 @@
 | `onundo`         | script | 当文档执行撤销时运行脚本                                        |
 | `onunload`       | script | 当用户离开文档时运行脚本                                        |
 
+```html
+
+```
+
 :::
 
 :::snippet HTML5 表单事件(Form Events)
@@ -31,6 +35,10 @@
 | `onforminput`   | script | 当表单获得用户输入时运行脚本 |
 | `oninput`       | script | 当元素获得用户输入时运行脚本 |
 | `oninvalid`     | script | 当元素无效时运行脚本         |
+
+```html
+
+```
 
 :::
 
@@ -47,6 +55,10 @@
 | `ondrop`       | script | 当被拖动元素正在被拖放时运行脚本         |
 | `onmousewheel` | script | 当转动鼠标滚轮时运行脚本                 |
 | `onscroll`     | script | 当滚动元素的滚动条时运行脚本             |
+
+```html
+
+```
 
 :::
 
@@ -77,5 +89,9 @@
 | `ontimeupdate`       | script | 当媒介改变其播放位置时运行脚本                               |
 | `onvolumechange`     | script | 当媒介改变音量亦或当音量被设置为静音时运行脚本               |
 | `onwaiting`          | script | 当媒介已停止播放但打算继续播放时运行脚本                     |
+
+```html
+
+```
 
 :::
