--- a/src/notes/01html/05.md
+++ b/src/notes/01html/05.md
@@ -1,25 +1,51 @@
 :::snippet HTML5 窗口事件属性（Window Event Attributes 适用于 <body> 标签）
 
-| 属性             | 值     | 描述                                                            |
-| ---------------- | ------ | --------------------------------------------------------------- |
-| `onafterprint`   | script | 在打印文档之后运行脚本                                          |
-| `onbeforeprint`  | script | 在文档打印之前运行脚本                                          |
-| `onbeforeonload` | script | 在文档加载之前运行脚本                                          |
-| `onhashchange`   | script | 当文档改变时运行脚本                                            |
-| `onmessage`      | script | 当触发消息时运行脚本                                            |
-| `onoffline`      | script | 当文档离线时运行脚本                                            |
-| `ononline`       | script | 当文档上线时运行脚本                                            |
-| `onpagehide`     | script | 当窗口隐藏时运行脚本                                            |
-| `onpageshow`     | script | 当窗口可见时运行脚本                                            |
-| `onpopstate`     | script | 当窗口历史记录改变时运行脚本                                    |
-| `onredo`         | script | 当文档执行再执行操作（redo）时运行脚本                          |
-| `onresize`       | script | 当调整窗口大小时运行脚本                                        |
-| `onstorage`      | script | 当 Web Storage 区域更新时（存储空间中的数据发生变化时）运行脚本 |
-| `onundo`         | script | 当文档执行撤销时运行脚本                                        |
-| `onunload`       | script | 当用户离开文档时运行脚本                                        |
+| 属性             | 值     | 描述                     |
+| ---------------- | ------ | ------------------------ |
+| `onbeforeonload` | script | 在文档加载之前运行脚本   |
+| `onhashchange`   | script | 当文档改变时运行脚本     |
+| `onpageshow`     | script | 当窗口可见时运行脚本     |
+| `onresize`       | script | 当调整窗口大小时运行脚本 |
 
 ```html
-
+<body
+  onbeforeunload="return onbeforeunloadFun()"
+  onhashchange="onhashchangeFun()"
+  onpageshow="onpageshowFun()"
+  onresize="onresizeFun()"
+>
+  <p>关闭当前窗口，按下 F5 或点击以下链接触发 onbeforeunload 事件。</p>
+  <a href="//www.runoob.com">点击跳转到菜鸟教程</a>
+  <p>点击按钮修改当前 URL 的锚部分为 #part5</p>
+  <button onclick="changePart()">点我</button>
+  <p id="demo"></p>
+  <p>尝试调整浏览器的窗口</p>
+  <p id="demosize">&nbsp;</p>
+  <script>
+    function onbeforeunloadFun() {
+      return "我在这写点东西...";
+    }
+    // 使用 location.hash 属性来修改锚部分
+    function changePart() {
+      location.hash = "part5";
+      var x = "锚部分现在为: " + location.hash;
+      document.getElementById("demo").innerHTML = x;
+    }
+    // 如果锚部分改变则弹出提示窗口
+    function onhashchangeFun() {
+      alert("锚部分已修改！");
+    }
+    function onpageshowFun() {
+      alert("Welcome show!");
+    }
+    function onresizeFun() {
+      var w = window.outerWidth;
+      var h = window.outerHeight;
+      var txt = "窗口大小: 宽度=" + w + ", 高度=" + h;
+      document.getElementById("demosize").innerHTML = txt;
+    }
+  </script>
+</body>
 ```
 
 :::
@@ -28,16 +54,37 @@
 
 表单事件在 HTML 表单中触发 (适用于所有 HTML 元素, 但该 HTML 元素需在 form 表单内):
 
-| 属性            | 值     | 描述                         |
-| --------------- | ------ | ---------------------------- |
-| `oncontextmenu` | script | 当触发上下文菜单时运行脚本   |
-| `onformchange`  | script | 当表单改变时运行脚本         |
-| `onforminput`   | script | 当表单获得用户输入时运行脚本 |
-| `oninput`       | script | 当元素获得用户输入时运行脚本 |
-| `oninvalid`     | script | 当元素无效时运行脚本         |
+| 属性        | 值     | 描述                         |
+| ----------- | ------ | ---------------------------- |
+| `oninput`   | script | 当元素获得用户输入时运行脚本 |
+| `oninvalid` | script | 当元素无效时运行脚本         |
 
 ```html
-
+  <style>
+  div {
+      background: yellow;
+      border: 1px solid black;
+      padding: 10px;
+  }
+  </style>
+<script>
+  function myFunction() {
+    var x = document.getElementById("myInput").value;
+    document.getElementById("demo").innerHTML = "你输入的是: " + x;
+  }
+</script>
+<form action="#" method="get">
+  <input type="text" id="myInput" oninput="myFunction()" />
+  <p id="demo"></p>
+  oninvalid:
+  <input
+    type="text"
+    id="myInput"
+    pattern="[a-zA-Z]+"
+    oninvalid="setCustomValidity('Custom Message')"
+  />
+  <input type="submit" value="Submit" />
+</form>
 ```
 
 :::
@@ -53,11 +100,99 @@
 | `ondragover`   | script | 当元素被拖动至有效拖放目标上方时运行脚本 |
 | `ondragstart`  | script | 当拖动操作开始时运行脚本                 |
 | `ondrop`       | script | 当被拖动元素正在被拖放时运行脚本         |
-| `onmousewheel` | script | 当转动鼠标滚轮时运行脚本                 |
 | `onscroll`     | script | 当滚动元素的滚动条时运行脚本             |
 
-```html
+drag拖动及相关事件
 
+```html
+  <style>
+    .droptarget {
+      float: left;
+      width: 100px;
+      height: 35px;
+      margin: 15px;
+      padding: 10px;
+      border: 1px solid #aaaaaa;
+    }
+  </style>
+<body>
+
+  <p>在两个矩形框中来回拖动 p 元素:</p>
+  <div class="droptarget" ondrop="drop(event)" ondragover="dragOver(event)" ondragenter="dragEnter(event)"
+    ondragleave="dragLeave(event)">
+    <p ondragstart="dragStart(event)" ondrag="drag(event)" ondragend="dragEnd(event)" draggable="true" id="dragtarget">
+      拖动我!</p>
+  </div>
+  <div class="droptarget" ondrop="drop(event)" ondragover="dragOver(event)" ondragenter="dragEnter(event)"
+    ondragleave="dragLeave(event)">
+  </div>
+  <p style="clear:both;"><strong>注意：</strong>Internet Explorer 8 及更早 IE 版本或 Safari 5.1 及更早版本的浏览器不支持 drag 事件。</p>
+  <p id="demo"></p>
+  <script>
+    function dragStart(event) {
+      //dataTransfer.setData()方法设置数据类型和拖动的数据
+      event.dataTransfer.setData("Text", event.target.id);
+      // 拖动 p 元素时输出一些文本
+      document.getElementById("demo").innerHTML = "开始拖动 p 元素.";
+      //修改拖动元素的透明度
+      event.target.style.opacity = "0.4";
+    }
+    function dragEnd(event) {
+      document.getElementById("demo").innerHTML = "完成 p 元素的拖动";
+      event.target.style.opacity = "1";
+    }
+    function drag(event) {
+      document.getElementById("demo").style.color = "red";
+      //document.getElementById("demo").innerHTML = " p 元素正在拖动";
+    }
+    function dragEnter(event) {
+      if (event.target.className == "droptarget") {
+        //document.getElementById("demo").innerHTML = "进入放置区域";
+        event.target.style.border = "3px dotted red";
+      }
+    }
+    function dragLeave(event) {
+      if (event.target.className == "droptarget") {
+        //document.getElementById("demo").innerHTML = "离开放置区域";
+        event.target.style.border = "";
+      }
+    }
+    function dragOver(event) {
+      event.preventDefault();
+    }
+    function drop(event) {
+      event.preventDefault();
+      if (event.target.className == "droptarget") {
+        document.getElementById("demo").style.color = "";
+        event.target.style.border = "";
+        var data = event.dataTransfer.getData("Text");
+        event.target.appendChild(document.getElementById(data));
+      }
+    }
+  </script>
+
+</body>
+```
+
+onscroll
+
+```html
+  <p>尝试滚动 div。</p>
+  <div
+  onscroll="myFunction()" 
+  style="border: 1px solid black;width: 250px;height: 100px;overflow: scroll;">
+    世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。<br />
+    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。<br />
+    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。<br />
+    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了？<br />
+  </div>
+  <p>滚动 <span id="demo">0</span> 次。</p>
+  <script>
+    let x = 0;
+    function myFunction() {
+      document.getElementById("demo").innerHTML = x += 1;
+    }
+  </script>
 ```
 
 :::
@@ -90,8 +225,14 @@
 | `onvolumechange`     | script | 当媒介改变音量亦或当音量被设置为静音时运行脚本               |
 | `onwaiting`          | script | 当媒介已停止播放但打算继续播放时运行脚本                     |
 
-```html
+在视频/音频（audio/video）加载过程中，事件的触发顺序如下：
 
-```
+1. onloadstart
+2. ondurationchange
+3. onloadedmetadata
+4. onloadeddata
+5. onprogress
+6. oncanplay
+7. oncanplaythrough
 
 :::
