--- a/src/notes/01html/01.md
+++ b/src/notes/01html/01.md
@@ -90,7 +90,7 @@
   对空行和 空格
   进行控制
   </pre>
-神仙好：
+好了歌：
 <blockquote cite="https://baike.baidu.com/item/%E7%BA%A2%E6%A5%BC%E6%A2%A6/15311?fr=aladdin">
   世人都晓神仙好,惟有功名忘不了! 
   古今将相在何方?荒冢一堆草没了。
